test/tests/operators/accept_http/error_missing_parser.txt
error: required subpipeline was not provided
 --> tests/operators/accept_http/error_missing_parser.tql:5:1
  |
5 | accept_http "127.0.0.1:8080"
  | ^^^^^^^^^^^ 
  |
  = usage: accept_http endpoint:secret, [responses=record, max_request_size=int, max_connections=int, tls=record]
  = docs: https://docs.tenzir.com/reference/operators/accept_http
